--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,69 @@
 streamlit
+asttokens==2.4.1
+attrs==23.2.0
+catboost==1.2.3
+collection==0.1.6
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.2.0
+cycler==0.12.1
+debugpy==1.8.1
+DecisionTreeClassifier==0.0.7
+decorator==5.1.1
+et-xmlfile==1.1.0
+executing==2.0.1
+fastjsonschema==2.19.1
+fonttools==4.50.0
+graphviz==0.20.3
+greenlet==3.0.3
+imbalanced-learn==0.12.2
+ipykernel==6.29.3
+ipython==8.22.2
+jedi==0.19.1
+joblib==1.3.2
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+kiwisolver==1.4.5
+matplotlib==3.8.3
+matplotlib-inline==0.1.6
+mysql-connector-python==8.3.0
+nbformat==5.10.3
+nest-asyncio==1.6.0
+numpy==1.24.3
+openpyxl==3.1.2
+packaging==23.1
+pandas==2.2.1
+parso==0.8.3
+Pillow==9.5.0
+platformdirs==4.2.0
+plotly==5.20.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
+pure-eval==0.2.2
+Pygments==2.17.2
+PyMySQL==1.1.0
+pyodbc==5.1.0
+pyparsing==3.0.9
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2023.3
+pywin32==306
+pyzmq==25.1.2
+referencing==0.34.0
+rpds-py==0.18.0
+scikit-learn==1.4.1.post1
+scipy==1.12.0
+seaborn==0.13.2
+six==1.16.0
+SQLAlchemy==2.0.27
+stack-data==0.6.3
+tenacity==8.2.3
+threadpoolctl==3.1.0
+tornado==6.4
+traitlets==5.14.2
+typing_extensions==4.9.0
+tzdata==2023.3
+wcwidth==0.2.13
+xgboost==2.0.3
