--- a/config.yaml
+++ b/config.yaml
@@ -1,21 +1,27 @@
 credentials:
   usernames:
-    jsmith:
-      email: jsmith@gmail.com
+    echrappah:
+      email: emmanuel.chrappah@azubiafrica.org
       failed_login_attempts: 0 # Will be managed automatically
       logged_in: False # Will be managed automatically
-      name: John Smith
-      password: abc # Will be hashed automatically
-    rbriggs:
-      email: rbriggs@gmail.com
+      name: Emmanuel Chrappah
+      password: emma # Will be hashed automatically
+    ikwatei:
+      email: isaac@gmail.com
       failed_login_attempts: 0 # Will be managed automatically
       logged_in: False # Will be managed automatically
-      name: Rebecca Briggs
-      password: def # Will be hashed automatically
+      name: Isaac Kwatei
+      password: isaac # Will be hashed automatically      
+    azubi:
+      email: azubi@azubi.org
+      failed_login_attempts: 0 # Will be managed automatically
+      logged_in: False # Will be managed automatically
+      name: azubiafrica
+      password: azubi # Will be hashed automatically
 cookie:
   expiry_days: 30
   key: some_signature_key # Must be string
   name: some_cookie_name
 pre-authorized:
   emails:
-  - melsby@gmail.com
+  - emmanuel.chrappah@azubiafrica.org
