--- a/config.yaml
+++ b/config.yaml
@@ -8,10 +8,10 @@ credentials:
       password: emma # Will be hashed automatically
     ikwatei:
       email: isaac@gmail.com
-      failed_login_attempts: 0 # Will be managed automatically
-      logged_in: False # Will be managed automatically
+      failed_login_attempts: 0 
+      logged_in: False 
       name: Isaac Kwatei
-      password: isaac # Will be hashed automatically      
+      password: isaac     
     azubi:
       email: azubi@azubi.org
       failed_login_attempts: 0 # Will be managed automatically
